Fixed the overflow of text outside pane guidance

--- a/app/assets/stylesheets/guidance.scss
+++ b/app/assets/stylesheets/guidance.scss
@@ -135,7 +135,7 @@ h2{
   margin: 10px 20px 20px -1px;
   // padding-left: 10px;
   width: 270px;
-  height: 1000px;
+  height: 1070px;
   background-color: rgba(255, 255, 255, 0.93);
   }
 
@@ -185,7 +185,7 @@ h2{
     }
 
     .add_height {
-      height: 1070px;
+      height: 1170px;
       padding-right: 170px;
 
     }
@@ -218,7 +218,7 @@ h2{
     margin: 15px 3% 10px 3%
   }
   .add_height {
-    height: 1070px;
+    height: 1170px;
     padding-right: 170px;
 
   }
